<!--
    Tura - Application generation solution

    Copyright 2008-2023 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>sales-analyzer</groupId>
		<artifactId>sales-analyzer-parent</artifactId>
		<version>6.1.1</version>
	</parent>

	<artifactId>integration-testing</artifactId>
	<packaging>jar</packaging>

	<name>Sales Analyzer :: Integration Tests</name>
	<description>Sales Analyzer Integration Tests Parent</description>

	<dependencies>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tura.sales-analyzer</groupId>
			<artifactId>sa-admin-pageobjects</artifactId>
			<version>${project.version}</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
			</exclusions>
		</dependency>


		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>


		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-persistence-jpa</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-services-api</artifactId>
		</dependency>


		<dependency>
			<groupId>org.kie.server</groupId>
			<artifactId>kie-server-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.kie.server</groupId>
			<artifactId>kie-server-client</artifactId>
		</dependency>

		<dependency>
			<groupId>sales-analyzer</groupId>
			<artifactId>rules-commons</artifactId>
		</dependency>

		<dependency>
			<groupId>sales-analyzer</groupId>
			<artifactId>services</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>sales-analyzer</groupId>
			<artifactId>processes</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>sales-analyzer</groupId>
			<artifactId>post-deployer</artifactId>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>


		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</dependency>

		<dependency>
			<groupId>sales-analyzer</groupId>
			<artifactId>api-extension</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
		</dependency>


		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tura.sales-analyzer</groupId>
			<artifactId>db-persistence-model</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tura.sales-analyzer</groupId>
			<artifactId>jpa-persistence-repository</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tura.sales-analyzer</groupId>
			<artifactId>keycloak-persistence-model</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tura.sales-analyzer</groupId>
			<artifactId>proxy-repository</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tura.sales-analyzer</groupId>
			<artifactId>serialized-model</artifactId>
		</dependency>


		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
		</dependency>


		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-client</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jackson2-provider</artifactId>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>org.tura.platform</groupId>
			<artifactId>uuiserver-commons</artifactId>
		</dependency>


		<dependency>
			<groupId>org.tura.platform.test</groupId>
			<artifactId>commons-test</artifactId>
			<version>${project.version}</version>
		</dependency>
		
	</dependencies>


	<profiles>
		<profile>
			<id>TestSute</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<test>org.sales.analyzer.suites.TestSute</test>
						</configuration>
					</plugin>
				</plugins>
			</build>

		</profile>
		<profile>
			<id>CaseMgmSuite</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<test>org.sales.analyzer.suites.CaseMgmSuite</test>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>
	<build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--add-opens java.base/java.util=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>